--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,18 +25,19 @@
             </div>
         </div>
     </nav>
-    <div class="divide-y">
-        <div class="absolute inset-y-64 left-36">
-            <h1 class="text-5xl font-bold font-display text-white">Instant collaboration <br> for remote teams</h1>
-            <h3 class="text-1xl font-display pt-4 text-white">All-in-one place for your remote team to <br>chat, collaborate and track project progress</h3>
-            <button class="bg-white text-gray-900 py-2 px-24 mt-8 rounded">
-                <span>Teks Tombol</span>
-                
-              </button>
-            <button class="bg-blue-500 hover:bg-blue-600 text-white  py-2 ml-4 px-9 rounded">
-                Button Label
-            </button>
-        </div>
-      </div>
+
+    <div class="absolute inset-y-60 left-36">
+        <h1 class="text-5xl font-bold font-display text-white">Instant collaboration <br> for remote teams</h1>
+        <h3 class="text-1xl font-display pt-4 text-white">All-in-one place for your remote team to <br>chat, collaborate
+            and track project progress</h3>
+    </div>
+    <div class="absolute inset-y-96  left-36">
+        <button class="bg-white py-2 w-56 mt-14 text-left px-3 rounded">Email
+            <img class="absolute inset-y-16 left-48" src="Images/right-arrow-alt-regular-24.png" alt="">
+        </button>
+        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 ml-4 px-9 rounded">Button Label</button>
+    </div>
+
 </body>
+
 </html>
