--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <nav class="px-20 sm:px-20 py-12">
             <div class="flex items-center justify-between">
                 <div>
-                    <img class="ml-4 mt-1 mb-4 sm:ml-14" src="Images/team..png" alt="">
+                    <img class="ml-4 mt-mb-4 sm:ml-14" src="Images/team..png" alt="">
                 </div>
                 <div class="hidden sm:flex space-x-2 mt-1 sm:space-x-14">
                     <a href="#" class="text-white underline hover:text-white mt-1">Product</a>
@@ -40,10 +40,10 @@
                 <a href="#" class="block text-white underline hover:text-white">Log In</a>
                 <button class="block bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded mt-4">
                     <span class="text-white">Button Label</span>
-                </button>
+                </button> 
             </div>
         </nav>
-2
+
 
         <div class="absolute inset-y-40 sm:inset-y-60 left-24 sm:left-36">
             <h1 class="text-3xl sm:text-5xl font-bold font-display text-white text-center sm:text-left">Instant collaboration <br> for remote teams</h1>
