--- a/src/index.html
+++ b/src/index.html
@@ -9,40 +9,42 @@
 </head>
 
 <body>
-    <div class="bg-cover bg-no-repeat bg-center h-screen sm:bg-center " style="background-image: url('Images/hero-img.jpg');">
-        <nav class="px-20 sm:px-20 py-12">
-            <div class="flex items-center justify-between">
-                <div>
-                    <img class="ml-4 mt-mb-4 sm:ml-14" src="Images/team..png" alt="">
+        <div class="bg-cover bg-no-repeat bg-center h-screen sm:bg-center " style="background-image: url('Images/hero-img.jpg');">
+            <nav class="px-20 sm:px-20 py-12">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <a href="index.html">
+                            <img class="ml-4 mt-1 mb-4 sm:ml-12" src="Images/team..png" alt="">
+                        </a>
+                    </div>
+                    <div class="hidden sm:flex space-x-2 mt-1 sm:space-x-14">
+                        <a href="#" class="text-white font-semibold underline hover:text-white mt-1">Product</a>
+                        <a href="blog.html" class="text-white font-semibold underline hover:text-white mt-1">Blog</a>
+                        <a href="#" class="text-white font-semibold underline hover:text-white mt-1">Support</a>
+                        <a href="#" class="text-white font-semibold underline hover:text-white mt-1">Log In</a>
+                        <button class="bg-blue-200 py-2 px-6 rounded ">
+                            <span class="text-blue-900 font-semibold">Button Label</span>
+                        </button>
+                    </div>
+                    <div class="sm:hidden">
+                        <button id="toggleMenu" class="text-white focus:outline-none">
+                            <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+                                <path d="M4 6h16M4 12h16M4 18h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
-                <div class="hidden sm:flex space-x-2 mt-1 sm:space-x-14">
-                    <a href="#" class="text-white underline hover:text-white mt-1">Product</a>
-                    <a href="blog.html" class="text-white underline hover:text-white mt-1">Blog</a>
-                    <a href="#" class="text-white underline hover:text-white mt-1">Support</a>
-                    <a href="#" class="text-white underline hover:text-white mt-1">Log In</a>
-                    <button class="bg-blue-500 hover:bg-blue-600 py-2 px-6 rounded ">
+                <div id="collapseMenu" class="hidden sm:hidden">
+                    <a href="#" class="block text-white underline hover:text-white">Product</a>
+                    <a href="#" class="block text-white underline hover:text-white">Blog</a>
+                    <a href="#" class="block text-white underline hover:text-white">Support</a>
+                    <a href="#" class="block text-white underline hover:text-white">Log In</a>
+                    <button class="block bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded mt-4">
                         <span class="text-white">Button Label</span>
                     </button>
                 </div>
-                <div class="sm:hidden">
-                    <button id="toggleMenu" class="text-white focus:outline-none">
-                        <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
-                            <path d="M4 6h16M4 12h16M4 18h16" stroke="currentColor" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </button>
-                </div>
-            </div>
-            <div id="collapseMenu" class="hidden sm:hidden">
-                <a href="#" class="block text-white underline hover:text-white">Product</a>
-                <a href="#" class="block text-white underline hover:text-white">Blog</a>
-                <a href="#" class="block text-white underline hover:text-white">Support</a>
-                <a href="#" class="block text-white underline hover:text-white">Log In</a>
-                <button class="block bg-blue-500 hover:bg-blue-600 text-white py-2 px-6 rounded mt-4">
-                    <span class="text-white">Button Label</span>
-                </button> 
-            </div>
-        </nav>
+            </nav>
 
 
         <div class="absolute inset-y-40 sm:inset-y-60 left-24 sm:left-36">
